--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -13,9 +13,6 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Mkyong.com</a>
-</nav>
 
 <main role="main" class="container">
 
@@ -24,8 +21,10 @@
         <h2>
             <span th:text="'Hello, ' + ${message}"></span>
         </h2>
+        <h3><a class="navbar-brand" href="#">Anshul Shrivastava - 1735179</a></h3>
     </div>
 
 </main>
+<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
 </html>
